--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <!-- Add your content here -->
-     <h1>HELOOOO EVERYONE </h1>
+     <h1>HELOOOO EVERYONE ITS EZ THERE</h1>
     <script src='script.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js'></script>
