--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
     <!-- Add your content here -->
      <h1>HELOOOO EVERYONE ITS EZ THERE</h1>
+    <h1>The Difference between git and github is exactly like porn and pornhub XD - TheM3chanik</h1>
     <script src='script.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js'></script>
